--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -715,17 +715,21 @@ Taking pictures is savouring life intensely, every hundredth of a second. Life g
 2. The registrations will be closed once the event is in action.</br></br>
 3. The language of the debate will be English.</br></br>
 4. Each team will have 2 members.</br></br>
-5. One speaker will speak for the motion <strong>(4 Minutes)</strong> and the other will speak against the motion <strong>(4 minutes)</strong>. There will be a warning bell after 3 ½ minutes.</br></br>
-6. There will be three rounds. The first round would be a qualifiers round. The qualifying teams will be going forward to the second round and so on.</br></br>
-7. First two rounds have the same set of rules, just that the topic for the second round would be <strong>announced on the spot</strong> (Don’t worry though, you’ll have 10 minutes to prepare for this round!). The last round will be held on the last day of the event.</br></br>
-8. <strong>There will not be any cross-rebuttal rounds</strong>.</br></br>
-9. <strong>Negative marks</strong> shall be awarded for exceeding the time limit.</br></br>
-10. No expression shall be entertained which is offensive, personal or defamatory in nature, use of which shall lead to <strong>elimination</strong>.</br></br>
-11. The participating teams will be judged on the following criterions:</br>
+5. First Round: One speaker will speak for the motion <strong>(2 Minutes)</strong> and the other will speak against the motion <strong>(2 minutes)</strong>. There will be a warning bell after 1 ½ minutes.<br><br>
+6. Second Round: One speaker will speak for the motion <strong>(3 Minutes)</strong> and the other will speak against the motion <strong>(3 minutes)</strong>. There will be a warning bell after 2 ½ minutes.<br><br>
+7. Third Round: One speaker will speak for the motion <strong>(4 Minutes)</strong> and the other will speak against the motion <strong>(4 minutes)</strong>. There will be a warning bell after 3 ½ minutes.<br><br>
+8. The first round will be a qualifiers round. The qualifying teams will move forward to the second round and so on.
+9. First two rounds have the same set of rules, just that the topic for the second round would be <strong>announced on the spot</strong> (Don’t worry though, you’ll have 10 minutes to prepare for this round!). The last round will be held on the last day of the event.</br></br>
+10. <strong>There will not be any cross-rebuttal rounds</strong>.</br></br>
+11. <strong>Negative marks</strong> shall be awarded for exceeding the time limit.</br></br>
+12. No expression shall be entertained which is offensive, personal or defamatory in nature, use of which shall lead to <strong>elimination</strong>.</br></br>
+13. The participating teams will be judged on the following criterions:</br>
 a. Attitude</br>
 b. Fluency</br>
 c. Relevance</br></br>
-12. <strong>Decision of the judges will be final</strong>.</br></br>
+14. <strong>Decision of the judges will be final</strong>.</br></br>
+
+<h2><strong>The topic for the first round is, "Are exams a fair way of testing knowledge?"</strong><br>
 
 
                     <!--<ul class="list-inline">
@@ -1399,7 +1403,7 @@ who is saved.</p>-->
                       •	World 11 and adidas 11 not allowed.<br>
                       •	Difficulty-world class, match speed-normal.<br>
                       •	Camera angle- decided by the organizer.<br>
-                      
+
                       •	Decision by the organizer is final.<br><br>
                       <strong>NOTE: </strong>Standard gaming gear will be provided, but you are most welcome to get your own(RGB lit stuff).
                     </p>
