Updated whip thumbnail

--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -412,7 +412,7 @@
 
                 <a href="#portfolioModal11" class="portfolio-link" data-toggle="modal">
                     <figure class="mix work-item dance">
-                        <img src="/img/works/dance.jpg" alt="">
+                        <img src="/img/works/whip1.png" alt="">
                         <figcaption class="overlay" style="padding-top:30%;padding-bottom30%">
                             <p>
                                 <h4>Whip and Nae Nae</h4>
